After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723863 - Implementation for component->get_size not needed
Implementation for component->get_size not needed
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-02-07 16:50 UTC by Alejandro Piñeiro Iglesias (IRC: infapi00)
Modified: 2014-02-10 12:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Removes implementation for component->get_size (1.58 KB, patch)
2014-02-07 16:50 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
committed Details | Review

Description Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-02-07 16:50:46 UTC
Created attachment 268435 [details] [review]
Removes implementation for component->get_size

Recently ATK deprecated atk_component_get_size as is redundant. You can get the same information with atk_component_get_extents. In fact atk provides a default implementation for atk_component_get_size (that internally uses get_extents) so even without the deprecation, it is not needed to implement this method.
Comment 1 Matthias Clasen 2014-02-08 02:28:40 UTC
Review of attachment 268435 [details] [review]:

sure, thanks for the patch